# static-ptr-linker-error

./: .gitignore  .gitmodules  Main.hs  Readme.md  build-with-dcore-lint.txt  package.yaml  stack.yaml  static-ptr-linker-error.cabal
src/: Main.hs
